Agreagado una etiqueta h3

--- a/practica.html
+++ b/practica.html
@@ -3,6 +3,7 @@
 	<title> Es es una pagina sencilla	</title>
 	</head>
 	<body>
+	<h3>Esta etiqueta si desaparece en cambio de rama</h3>
 	<p>Esta etiqueta si me gusta</p>
 	</body>
 </html>
